# nubit-hosting-panel

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: backup.rs  caddy.rs  config.rs  db.rs  docker.rs  doctor.rs  export.rs  main.rs  mssql.rs  schedule.rs  ssh.rs  store.rs  tui.rs  update.rs  wp.rs
src/tui/: selection.rs
