[package]
name = "nubit-hosting-panel"
version = "0.1.9"
edition = "2024"

[[bin]]
name = "hostingctl"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
crossterm = "0.29"
dirs = "6"
flate2 = "1"
mysql = "26"
rand = "0.9"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
