[package]
name = "nubit-hosting-panel"
version = "0.1.32"
edition = "2024"

[[bin]]
name = "hostingctl"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
crossterm = "0.29"
dirs = "6"
flate2 = "1"
mysql = "26"
portable-pty = "0.8"
rand = "0.9"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.9"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
vt100 = "0.15"
